--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/ajaxorg/cockpit.git
 [submodule "support/pilot"]
 	path = support/pilot
-	url = git://github.com/ajaxorg/pilot.git
+	url = git://github.com/jcheng5/pilot.git
